More swag! (opentelemetry/jaeger)
